syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types";

message ExecutorOfSchema {
  string nftSchemaCode = 1;
  repeated string executorAddress = 2;
}
